--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -410,7 +410,7 @@ Implicit theories of willpower in emotion control was assessed using the implici
 To assess Need for Cognition, the German version short form of the Need for Cognition Scale\textsuperscript{28,52} was used.
 To assess self-control\textsuperscript{53}, sum scores of the German versions of the following questionnaires were used: the Self-Regulation Scale (SRS)\textsuperscript{54}, the Brief Self-Control Scale (BSCS)\textsuperscript{55,56}, and the Barratt Impulsiveness Scale (BIS-11)\textsuperscript{57,58}.
 Attentional control were assessed using the Attentional Control Scale (ACS)\textsuperscript{59}.
-For more detailed information on psychometric properties of the questionnaires, please see \protect\hyperlink{SupplementQuestionnaires}{supplementary material}.
+For more detailed information on psychometric properties of the questionnaires, please see the \protect\hyperlink{SupplementQuestionnaires}{supplementary material}.
 
 \hypertarget{emotion-regulation-paradigm}{%
 \subsubsection{2.3.2 Emotion regulation paradigm}\label{emotion-regulation-paradigm}}
@@ -580,11 +580,11 @@ The Stage 1 Registered Report protocol has been approved and is available at \hr
 \hypertarget{participants-and-descriptive-statistics}{%
 \subsection{3.1 Participants and descriptive statistics}\label{participants-and-descriptive-statistics}}
 
-Data collection took place between 2022-08 and 2023-02.
+Data collection took place between 16th of August 2022 and the 3rd of February 2023.
 A total of \(N=151\) participants completed the online survey and were invited to participate in the two lab sessions.
-Of these, \(N=125\) participated in the first laboratory session\textsuperscript{34} and \(N=121\) completed the second laboratory session.
+Of these, \(N=124\) participated in the first laboratory session\textsuperscript{34} and \(N=121\) completed the second laboratory session.
 Of these, \(n=1\) person had to be excluded from analyses because they did not follow the instructions.
-The final sample consisted of \(N=120\) participants (100 female; age: \(M=22.5\text{ }\pm\text{ }SD = 3.0\)).
+The final sample consisted of \(N=120\) participants (100 female; age: \(M\text{ }\pm\text{ }SD =22.5\text{ }\pm\text{ }3.0\) years old), which is 1.4 times more than what the highest sample size calculation required.
 Please note that sample size for individual calculations may be smaller due to failure of EMG recording (\(n=1\)) and failure to record utility ratings (\(n=18\)).
 
 \hypertarget{confirmatory-analyses}{%
@@ -598,11 +598,12 @@ Please note that sample size for individual calculations may be smaller due to f
 
 To explore whether negative pictures evoke emotional arousal and physiological responding, we conducted separate ANOVAs for the active viewing condition with predictors subjective arousal, \emph{Corrugator} and \emph{Levator} activity.
 Descriptive values of each predictor for each condition can be found in table \ref{tab:TabDescr}.
-We found a highly significant main effect of valence for subjective arousal (\(F(1, 119) = 399.95\), \(p < .001\), \(\hat{\eta}^2_G = .589\), 90\% CI \([.498, .659]\), \(\mathrm{BF}_{\textrm{10}} = 1.47 \times 10^{44}\)), \emph{Corrugator} activity (\(F(1, 117) = 27.73\), \(p < .001\), \(\hat{\eta}^2_G = .111\), 90\% CI \([.037, .206]\), \(\mathrm{BF}_{\textrm{10}} = 8.67 \times 10^{16}\)), and \emph{Levator} activity (\(F(1, 117) = 8.87\), \(p = .004\), \(\hat{\eta}^2_G = .039\), 90\% CI \([.002, .111]\), \(\mathrm{BF}_{\textrm{10}} = 188.72\)), indicating that negative pictures successfully increased emotional arousal and physiological responding.
+We found a significant main effect of valence for subjective arousal (\(F(1, 119) = 399.95\), \(p < .001\), \(\hat{\eta}^2_G = .589\), 90\% CI \([.498, .659]\), \(\mathrm{BF}_{\textrm{10}} = 2.73 \times 10^{48}\)), \emph{Corrugator} activity (\(F(1, 117) = 27.73\), \(p < .001\), \(\hat{\eta}^2_G = .111\), 90\% CI \([.037, .206]\), \(\mathrm{BF}_{\textrm{10}} = 8.03 \times 10^{18}\)), and \emph{Levator} activity (\(F(1, 117) = 8.87\), \(p = .004\), \(\hat{\eta}^2_G = .039\), 90\% CI \([.002, .111]\), \(\mathrm{BF}_{\textrm{10}} = 258.85\)).
+Post-hoc contrasts indicated that negative pictures successfully increased emotional arousal and physiological responding (please see Tables \ref{tab:SupplEffectArousalView} to @ref(tab:SupplEffectLevView and Figures \ref{fig:SupplFigArousalView} to \ref{fig:SupplFigLevView} in the {[}supplement{]}).
 
 To investigate whether ER strategies reduce emotional arousal and physiological responding, we conducted separate rmANOVA comparing subjective arousal, \emph{Corrugator} and \emph{Levator} activity of four strategies (active viewing, distraction, distancing, suppression).
-We found a significant effect of strategy for subjective arousal (\(F(2.71, 322.55) = 7.39\), \(p < .001\), \(\hat{\eta}^2_G = .015\), 90\% CI \([.000, .036]\), \(\mathrm{BF}_{\textrm{10}} = 0.21\)), \emph{Corrugator} activity (\(F(1.76, 206.02) = 13.70\), \(p < .001\), \(\hat{\eta}^2_G = .056\), 90\% CI \([.019, .094]\), \(\mathrm{BF}_{\textrm{10}} = 6.16 \times 10^{7}\)), and \emph{Levator} activity (\(F(1.54, 180.41) = 19.95\), \(p < .001\), \(\hat{\eta}^2_G = .089\), 90\% CI \([.043, .134]\), \(\mathrm{BF}_{\textrm{10}} = 3.22 \times 10^{17}\)), indicating that regulation strategies reduced subjective arousal and physiological responding.
-For detailed information on post-hoc tests, please see tables \ref{tab:SupplEffectArousalReg} to \ref{tab:SupplEffectLevReg} and figures \ref{fig:SupplFigArousalReg} to \ref{fig:SupplFigLevReg} in the \protect\hyperlink{SupplementEffectER}{supplementary material}.
+We found a significant effect of strategy for subjective arousal (\(F(2.71, 322.55) = 7.39\), \(p < .001\), \(\hat{\eta}^2_G = .015\), 90\% CI \([.000, .036]\), \(\mathrm{BF}_{\textrm{10}} = 156.94\)), \emph{Corrugator} activity (\(F(1.76, 206.02) = 13.70\), \(p < .001\), \(\hat{\eta}^2_G = .056\), 90\% CI \([.019, .094]\), \(\mathrm{BF}_{\textrm{10}} = 1.97 \times 10^{10}\)), and \emph{Levator} activity (\(F(1.54, 180.41) = 19.95\), \(p < .001\), \(\hat{\eta}^2_G = .089\), 90\% CI \([.043, .134]\), \(\mathrm{BF}_{\textrm{10}} = 7.68 \times 10^{18}\)), indicating that regulation strategies reduced subjective arousal and physiological responding.
+For detailed information on post-hoc contrasts, please see Tables \ref{tab:SupplEffectArousalReg} to \ref{tab:SupplEffectLevReg} and Figures \ref{fig:SupplFigArousalReg} to \ref{fig:SupplFigLevReg} in the \protect\hyperlink{SupplementEffectER}{supplementary material}.
 
 {[}INSERT TABLE 1 HERE{]}
 
@@ -633,14 +634,14 @@ Suppression & 168.6 ± 95.8 & 158.3 ± 99.5 & 229.3 ± 95 & 0.07 ± 3.78 & -0.03
 \paragraph{Subjective effort of ER strategies}\label{subjective-effort-of-er-strategies}}
 
 To investigate whether ER strategies require cognitive effort, we conducted an rmANOVA comparing the subjective effort ratings of four strategies (active viewing, distraction, distancing, suppression).
-We found a significant effect of strategy (\(F(2.92, 347.65) = 128.47\), \(p < .001\), \(\hat{\eta}^2_G = .327\), 90\% CI \([.261, .384]\), \(\mathrm{BF}_{\textrm{10}} = 1.84 \times 10^{37}\); see figure~\ref{fig:FigSubjEffort}).
-Post-hoc test showed significantly higher subjective effort for distraction (\(t(357) = -17.92\), \(p_\mathrm{\scriptsize Tukey(4)} < .001\), \(\mathrm{BF}_{\textrm{10}} = 3.61 \times 10^{30}\)), distancing (\(t(357) = -15.82\), \(p_\mathrm{\scriptsize Tukey(4)} < .001\), \(\mathrm{BF}_{\textrm{10}} = 1.60 \times 10^{28}\)), and suppression (\(t(357) = -12.26\), \(p_\mathrm{\scriptsize Tukey(4)} < .001\), \(\mathrm{BF}_{\textrm{10}} = 1.27 \times 10^{19}\)) compared to active viewing.
+We found a significant effect of strategy (\(F(2.92, 347.65) = 128.47\), \(p < .001\), \(\hat{\eta}^2_G = .327\), 90\% CI \([.261, .384]\), \(\mathrm{BF}_{\textrm{10}} = 1.74 \times 10^{53}\); see figure~\ref{fig:FigSubjEffort}).
+Post-hoc contrasts showed significantly higher subjective effort for distraction (\(t(357) = -17.92\), \(p_\mathrm{\scriptsize Tukey(4)} < .001\), \(\mathrm{BF}_{\textrm{10}} = 3.61 \times 10^{30}\)), distancing (\(t(357) = -15.82\), \(p_\mathrm{\scriptsize Tukey(4)} < .001\), \(\mathrm{BF}_{\textrm{10}} = 1.60 \times 10^{28}\)), and suppression (\(t(357) = -12.26\), \(p_\mathrm{\scriptsize Tukey(4)} < .001\), \(\mathrm{BF}_{\textrm{10}} = 1.27 \times 10^{19}\)) compared to active viewing.
 Moreover, we found significantly lower effort during suppression compared with distraction (\(t(357) = 5.66\), \(p_\mathrm{\scriptsize Tukey(4)} < .001\), \(\mathrm{BF}_{\textrm{10}} = 1.61 \times 10^{6}\)) and distancing (\(t(357) = 3.55\), \(p_\mathrm{\scriptsize Tukey(4)} = .002\), \(\mathrm{BF}_{\textrm{10}} = 29.19\)).
 
 {[}INSERT FIGURE 3 HERE{]}
 
 \begin{figure}[H]
-\includegraphics[width=\textwidth]{figures/FigSubjEffort} \caption{Subjective effort ratings vizalized as boxplots. Dots represent individual effort ratings placed in 150 qantiles.}\label{fig:FigSubjEffort}
+\includegraphics[width=\textwidth]{figures/FigSubjEffort} \caption{Subjective effort ratings vizalized as boxplots. Dots represent individual effort ratings placed in 150 quantiles.}\label{fig:FigSubjEffort}
 \end{figure}
 
 The cognitive effort expended also played the most important role in the subsequent choice decision, which resembled previous findings of our group\textsuperscript{22}.
@@ -739,7 +740,7 @@ Only predictors that had previously shown a significant association with SVs wer
 The third model followed the specification:
 \[
 \begin{split}
-SV \sim \text{effort rating} + \text{utility rating} + corrugator \text{ activity} \\\ \text{self-control} + \text{NFC} + (1 |subject)
+SV \sim \text{effort rating} + \text{utility rating} + corrugator \text{ activity} \\\ + \text{self-control} + \text{NFC} + (1 |subject)
 \end{split}
 \]
 As one would expect, the predictors effort rating (\(\hat{\beta} = 0.00\), 95\% CI \([0.00, 0.00]\), \(t(5,620.93) = -14.26\), \(p < .001\)) showed a negative association with SVs, while utility rating (\(\hat{\beta} = 0.00\), 95\% CI \([0.00, 0.00]\), \(t(5,620.93) = 33.28\), \(p < .001\)), and \emph{Corrugator} activity (\(\hat{\beta} = 0.01\), 95\% CI \([0.00, 0.01]\), \(t(5,620.93) = 2.12\), \(p = .034\)) showed a significant positive association with SVs.
@@ -1325,7 +1326,7 @@ An internal consistency of Cronbach's \(\alpha=.88\) was reported\textsuperscrip
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:TabNV}Results of Shapiro-Wilk test for normal distribution of subjective arousal and effort ratings for all strategies.}
+\caption{\label{tab:TabNVRatings}Results of Shapiro-Wilk test for normal distribution of subjective arousal and effort ratings for all strategies.}
 
 \begin{tabular}{lllll}
 \toprule
@@ -1354,7 +1355,7 @@ Effort Suppression & 189.80 & 92.34 & 0.98 & 0.12\\
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:TabNV}Results of Shapiro-Wilk test for normal distribution of Corrugator and Levator activity for all strategies.}
+\caption{\label{tab:TabNCEMG}Results of Shapiro-Wilk test for normal distribution of Corrugator and Levator activity for all strategies.}
 
 \begin{tabular}{lllll}
 \toprule
@@ -1380,15 +1381,104 @@ Levator Suppression & 0.01 & 1.00 & 0.55 & 0.00\\
 
 \newpage
 
-\hypertarget{SupplementEffectER}{%
-\subsection{Post-hoc tests of strategies for effects of ER on subjective arousal and physiological responding}\label{SupplementEffectER}}
+\hypertarget{SupplementEffectValence}{%
+\subsection{Post-hoc contrasts for effects of valence on subjective arousal and physiological responding}\label{SupplementEffectValence}}
 
 \begin{table}[H]
 
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:SupplEffectArousalReg}Post-hoc tests for effects of ER strategies on subjective arousal ratings.}
+\caption{\label{tab:SupplEffectArousalView}Post-hoc contrasts for effects of valence on subjective arousal ratings in the active viewing conditions.}
+
+\footnotesize{
+
+\begin{tabular}{lllllllll}
+\toprule
+Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\mathrm{BF}_{\textrm{10}}$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
+\midrule
+$View_{neutral} - View_{negative}$ & -161.15 & 8.06 & 119.00 & -20.00 & 0.00 & $3.22 \times 10^{36}$ & 0.77 & {}[0.72, 1.00]\\
+\bottomrule
+\end{tabular}
+
+}
+
+\end{threeparttable}
+\end{center}
+
+\end{table}
+
+\begin{figure}[H]
+\includegraphics[width=\textwidth]{figures/FigSubjArousalView} \caption{Subjective arousal ratings of the active viewing conditions vizalized as boxplots. Dots represent individual effort ratings placed in 150 quantiles.}\label{fig:SupplFigArousalView}
+\end{figure}
+
+\begin{table}[H]
+
+\begin{center}
+\begin{threeparttable}
+
+\caption{\label{tab:SupplEffectCorrView}Post-hoc contrasts for effects of valence on Corrugator activity in the active viewing conditions.}
+
+\footnotesize{
+
+\begin{tabular}{lllllllll}
+\toprule
+Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\mathrm{BF}_{\textrm{10}}$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
+\midrule
+$View_{neutral} - View_{negative}$ & -0.27 & 0.05 & 117.00 & -5.27 & 0.00 & $8.67 \times 10^{16}$ & 0.19 & {}[0.10, 1.00]\\
+\bottomrule
+\end{tabular}
+
+}
+
+\end{threeparttable}
+\end{center}
+
+\end{table}
+
+\begin{figure}[H]
+\includegraphics[width=\textwidth]{figures/FigCorrView} \caption{Corrugator activity in mV during the active viewing conditions, vizalized as boxplots. Dots represent individual Corrugator activity measures placed in 150 quantiles.}\label{fig:SupplFigCorrView}
+\end{figure}
+
+\begin{table}[H]
+
+\begin{center}
+\begin{threeparttable}
+
+\caption{\label{tab:SupplEffectLevView}Post-hoc contrasts for effects of valence on Levator activity in the active viewing conditions.}
+
+\footnotesize{
+
+\begin{tabular}{lllllllll}
+\toprule
+Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\mathrm{BF}_{\textrm{10}}$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
+\midrule
+$View_{neutral} - View_{negative}$ & -0.23 & 0.08 & 117.00 & -2.98 & 0.00 & 188.72 & 0.07 & {}[0.01, 1.00]\\
+\bottomrule
+\end{tabular}
+
+}
+
+\end{threeparttable}
+\end{center}
+
+\end{table}
+
+\begin{figure}[H]
+\includegraphics[width=\textwidth]{figures/FigLevView} \caption{Levator activity in mV during the active viewing conditions, vizalized as boxplots. Dots represent individual Levator activity measures placed in 150 quantiles.}\label{fig:SupplFigLevView}
+\end{figure}
+
+\newpage
+
+\hypertarget{SupplementEffectER}{%
+\subsection{Post-hoc contrasts for effects of ER strategies on subjective arousal and physiological responding}\label{SupplementEffectER}}
+
+\begin{table}[H]
+
+\begin{center}
+\begin{threeparttable}
+
+\caption{\label{tab:SupplEffectArousalReg}Post-hoc contrasts for effects of ER strategies on subjective arousal ratings.}
 
 \footnotesize{
 
@@ -1413,7 +1503,7 @@ $Distancing - Suppression$ & -4.66 & 6.68 & 357.00 & -0.70 & 1.00 & 0.14 & 1.36e
 \end{table}
 
 \begin{figure}[H]
-\includegraphics[width=\textwidth]{figures/FigSubjArousal} \caption{Subjective arousal ratings vizalized as boxplots. Dots represent individual effort ratings placed in 150 qantiles.}\label{fig:SupplFigArousalReg}
+\includegraphics[width=\textwidth]{figures/FigSubjArousalReg} \caption{Subjective arousal ratings vizalized as boxplots. Dots represent individual effort ratings placed in 150 quantiles.}\label{fig:SupplFigArousalReg}
 \end{figure}
 
 \begin{table}[H]
@@ -1421,7 +1511,7 @@ $Distancing - Suppression$ & -4.66 & 6.68 & 357.00 & -0.70 & 1.00 & 0.14 & 1.36e
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:SupplEffectCorrReg}Post-hoc tests for effects of ER strategies on Corrugator activity}
+\caption{\label{tab:SupplEffectCorrReg}Post-hoc contrasts for effects of ER strategies on Corrugator activity}
 
 \footnotesize{
 
@@ -1446,7 +1536,7 @@ $Distancing - Suppression$ & 0.02 & 0.04 & 351.00 & 0.58 & 1.00 & $4.79 \times 1
 \end{table}
 
 \begin{figure}[H]
-\includegraphics[width=\textwidth]{figures/FigCorrReg} \caption{Corrugator activity in mV vizalized as boxplots. Dots represent individual Levatorr activity measures placed in 150 qantiles.}\label{fig:SupplFigCorrReg}
+\includegraphics[width=\textwidth]{figures/FigCorrReg} \caption{Corrugator activity in mV vizalized as boxplots. Dots represent individual Levatorr activity measures placed in 150 quantiles.}\label{fig:SupplFigCorrReg}
 \end{figure}
 
 \begin{table}[H]
@@ -1454,7 +1544,7 @@ $Distancing - Suppression$ & 0.02 & 0.04 & 351.00 & 0.58 & 1.00 & $4.79 \times 1
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:SupplEffectLevReg}Post-hoc tests for effects of ER strategies on Levator activity}
+\caption{\label{tab:SupplEffectLevReg}Post-hoc contrasts for effects of ER strategies on Levator activity}
 
 \footnotesize{
 
@@ -1479,7 +1569,7 @@ $Distancing - Suppression$ & 0.04 & 0.05 & 351.00 & 0.71 & 1.00 & $9.86 \times 1
 \end{table}
 
 \begin{figure}[H]
-\includegraphics[width=\textwidth]{figures/FigLevReg} \caption{Levator activity in mV vizalized as boxplots. Dots represent individual Levator activity measures placed in 150 qantiles.}\label{fig:SupplFigLevReg}
+\includegraphics[width=\textwidth]{figures/FigLevReg} \caption{Levator activity in mV vizalized as boxplots. Dots represent individual Levator activity measures placed in 150 quantiles.}\label{fig:SupplFigLevReg}
 \end{figure}
 \newpage
 
