justification for expl analyses

--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -633,6 +633,18 @@ https://www.nature.com/articles/nn2007.pdf},
    year = {2010}
 }
 
+@article{Kool2013,
+   author = {Kool, W. and McGuire, J. T. and Wang, G. J. and Botvinick, M. M.},
+   title = {Neural and Behavioral Evidence for an Intrinsic Cost of Self-Control},
+   journal = {Plos One},
+   volume = {8},
+   number = {8},
+   ISSN = {1932-6203},
+   DOI = {10.1371/journal.pone.0072626},
+   url = {<Go to ISI>://WOS:000323815200050},
+   year = {2013}}
+}
+
 @article{Kool2014,
    author = {Kool, W. and Botvinick, M.},
    title = {A labor/leisure tradeoff in cognitive control},
