--- a/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
@@ -24,7 +24,7 @@ options(papaja.na_string = "")
 
 ## 3.1 Participants and descriptive statistics
 
-Data collection took place between `r format(as.Date(acqui_time[1]), "%Y-%m")` and `r format(as.Date(acqui_time[2]), "%Y-%m")`.
+Data collection took place between `r format(as.Date(acqui_time[1]), "%Y-%m")` and `r format(as.Date(acqui_time[2]), "%Y-%m")`. <!-- hier wird "2022-08 and 2023-02" geschrieben, finde ich im Lesefluss nicht so schön. Wie wäre es mit "August 2022 and February 2023"?-->
 A total of $N=`r sum(data_survey[,"lay_beliefs_complete"] == 2)`$ participants completed the online survey and were invited to participate in the two lab sessions.
 Of these, $N=`r sum(data_survey[,"files_coged_complete"] == 2)`$ participated in the first laboratory session [@ZernaScheffel2022] and $N=`r sum(data_survey[,"followup_ered_complete"] == 2)`$ completed the second laboratory session.
 Of these, $n=1$ person had to be excluded from analyses because they did not follow the instructions.
@@ -33,11 +33,11 @@ Please note that sample size for individual calculations may be smaller due to f
 
 ## 3.2. Confirmatory analyses
 
-### Manipulation checks
+### Manipulation checks <!-- es gibt keine weitere Überschrift auf dieser Ebene, würde ich jedoch erwarten.-->
 
-#### Subjective arousal and physiological responding
+#### Subjective arousal and physiological responding <!-- ich würde empfehlen, die selben Überschriften wie in 2.5 Analysis Plan zu nehmen, das wäre für diese Ergebnisse "Effect of valence on arousal and facial EMG." -->
 
-To explore whether negative pictures evoke emotional arousal and physiological responding, we conducted separate ANOVAs for the active viewing condition with predictors subjective arousal, *Corrugator* and *Levator* activity.
+To explore whether negative pictures evoke emotional arousal and physiological responding, we conducted separate rmANOVAs for the active viewing condition with predictors subjective arousal, *Corrugator* and *Levator* activity. <!-- in den Methods habt ihr es klein und kursiv geschrieben. -->
 Descriptive values of each predictor for each condition can be found in table \@ref(tab:TabDescr).
 We found a highly significant main effect of valence for subjective arousal (`r papaja::apa_print(SubjArousalView_aov)$full_result`, `r papaja::apa_print(SubjArousalView_BF)$statistic`), *Corrugator* activity (`r papaja::apa_print(EMGCorrView_aov)$full_result`, `r papaja::apa_print(EMGCorrView_BF)$statistic`), and *Levator* activity (`r papaja::apa_print(EMGLevView_aov)$full_result`, `r papaja::apa_print(EMGLevView_BF)$statistic`), indicating that negative pictures successfully increased emotional arousal and physiological responding.
 
