--- a/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
@@ -76,7 +76,7 @@ Cognitive effort also played the most important role in the subsequent choice de
 A more detailed list of all reasons can be found in Table XX <!-- Nummer noch ergänzen --> in [supplementary material](#SupplementReasonChoice).
 
 ### Neue Überschrift? <!-- ab hier sind es doch keine Manipulation Checks mehr, oder? -->
-#### Subjective values of ER strategies
+#### Subjective values of ER strategies and their predictors
 
 Individual SVs could be determined for `r nrow(data_SV)/3` participants for all three ER strategies.
 SVs ranged between `r papaja::apa_num(min(data_SV$sv), digits = 3)` and `r papaja::apa_num(max(data_SV$sv))`.
@@ -86,8 +86,8 @@ Highest SV for distraction was reported by $n=$ `r  papaja::printnum(sum(data_SV
 
 To investigate, which variables can predict individual SVs of ER strategies, a multilevel model approach was chosen.
 The ICC of the null model was $ICC=$ `r papaja::printnum(ICC_between_MLM_0)`, indicating that the level-2 predictor subject accounted for `r papaja::printnum(round(ICC_between_MLM_0*100, digits = 1))`% of total variance.
-The preregistered model showed a correlation of $r=$ `r papaja::printnum(attr(summary(MLM_1)$varcor[1]$ID,"correlation")[1,2])` of the random effects subjects and recoded strategy ($BF10$ of the variable strategy: `r papaja::apa_print(MLM_1_BF)$statistic`).
-Our model explained `r papaja::printnum(MLM1_r2[2])`% of variance and thus we assumed our model was overfitted due to including recoded strategy as the random slope.
+The preregistered model showed a correlation of $r=$ `r papaja::printnum(attr(summary(MLM_1)$varcor[1]$ID,"correlation")[1,2])` between the random effects subjects and recoded strategy ($BF10$ of the variable strategy: `r papaja::apa_print(MLM_1_BF)$statistic`). <!-- für die Lesbarkeit wäre es besser, wenn die Variablen irgendwie anders formatiert wären, kursiv oder in Anführungszeichen. -->
+Our model explained `r papaja::printnum(MLM1_r2[2])`% of variance <!-- im PDF steht dasnn 0.90% of variance, aber ihr meint doch 90% of variance, oder? --> and thus we assumed our model was overfitted due to including recoded strategy as the random slope.
 We therefore set a new model without the recoded strategy as the random slope factor to estimate the influence of predictors on SVs more precisely.
 The second model followed the specification: 
 $$
@@ -96,7 +96,7 @@ SV \sim \text{effort rating} + \text{arousal rating} + \text{utility rating} + c
 \end{split}
 $$ 
 
-The second model explained `r papaja::printnum(MLM2_r2[2])`% of variance. 
+The second model explained `r papaja::printnum(MLM2_r2[2])`% of variance <!-- im PDF steht dasnn 0.41% of variance, aber ihr meint doch 41% of variance, oder? --> . 
 All results of the second model are in Table\ \@ref(tab:TabMLMH5).
 
 [INSERT TABLE 2 HERE]
@@ -111,7 +111,7 @@ papaja::apa_table(
 ```
 
 The predictors effort rating (`r papaja::apa_print(MLM_2)$full_result$effort_cwc`), utility rating (`r papaja::apa_print(MLM_2)$full_result$utility_cwc`), and *Corrugator* activity (`r papaja::apa_print(MLM_2)$full_result$Corr_cwc`) showed a significant association with SVs.
-The values were relatively small, so the respective effect size $f^{2}$ was calculated as the explained variance.
+The values <!-- welche? Beta? --> were relatively small, so the respective effect size $f^{2}$ was calculated as the explained variance.
 The predictor utility rating showed the greatest effect size of all predictors ($f^{2}=$ `r papaja::printnum(H5_M2_table[4,5], digits = 3)`), indicating that utility rating explained `r papaja::printnum(H5_M2_table[4,5]*100, digits = 1)`% of variance in SVs.
 Effort rating showed an effect size of $f^{2}=$ `r papaja::printnum(H5_M2_table[2,5], digits = 3)`.
 The effect sizes of all other predictors were negligibly small ($f^{2}< 0.01$).
