--- a/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
@@ -130,10 +130,10 @@ knitr::include_graphics(here("06_Paper", "ER-ED", "ERED_Stage2", "figures", "Fig
 
 We then conducted an ordinal regression with the dependent variable "choice" and the individual SVs of all three strategies as independent variables.
 Overall model fit was fair with $R^{2}=$ `r papaja::printnum(Choice_OrdReg_R2)`.
-The predictor SV of strategy distraction was found to contribute to the model (`r papaja::apa_print(Choice_OrdReg)$full_result$distraction_sv`, $BF10=$ `r papaja::printnum(Choice_OrdReg_Posterior$BFtu_exploratory[2,2])`).
-The estimated odds ratio indicated a higher chance of choosing strategy distraction, when SV of that strategy is higher.
-Additionally, the predictor SV of strategy suppression was found to contribute to the model (`r papaja::apa_print(Choice_OrdReg)$full_result$suppression_sv`, $BF10=$ `r papaja::printnum(Choice_OrdReg_Posterior$BFtu_exploratory[4,3])`).
-The estimated odds ration indicated that a participant is more likely to later choose suppression, when SV of strategy suppression is higher.
+The SV of the strategy distraction contributed significantly to the model (`r papaja::apa_print(Choice_OrdReg)$full_result$distraction_sv`, $BF10=$ `r papaja::printnum(Choice_OrdReg_Posterior$BFtu_exploratory[2,2])`).
+The estimated odds ratio indicated a higher chance of choosing distraction, when the SV of that strategy is higher.
+Additionally, the SV of the strategy suppression contributed significantly to the model (`r papaja::apa_print(Choice_OrdReg)$full_result$suppression_sv`, $BF10=$ `r papaja::printnum(Choice_OrdReg_Posterior$BFtu_exploratory[4,3])`).
+The estimated odds ration indicated that a participant is more likely to later choose suppression, when the SV of the strategy suppression is higher.
 
 Last, we investigated whether SVs are associated with ER flexibility.
 We conducted a logistic regression to inspect whether participants' individual $slopes$ and $intercepts$ of ordered SVs could predict their ER flexibility score.
